completed heder sections

--- a/src/colors/colors.css
+++ b/src/colors/colors.css
@@ -1,4 +1,1 @@
-:root {
-  --primary-color: #304463;
-  --secondary-color: #7D8ABC;
-}/*# sourceMappingURL=colors.css.map */
+/*# sourceMappingURL=colors.css.map */
