--- a/src/colors/colors.scss
+++ b/src/colors/colors.scss
@@ -1,7 +1,6 @@
 //color-sections//
-:root {
-    --primary-color: #304463;
-    --secondary-color: #7D8ABC;
-  }
+
+    $primary-color: #304463;
+    $secondary-color: #7D8ABC;
 
 //color-sections//
